# mix-agent

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
config/: global.yml  mix_agent_disk.yml  mix_agent_machine.yml  mix_agent_service.yml
deploy/linux/: install.sh  install_basic_agent.sh  query_installed_agent.sh  stop_all_agent.sh
deploy/windows/: control.ps1  install_basic_agent.ps1  query_installed_agent.ps1  stop_all_agent.ps1
mix_agent_api/: Cargo.toml
mix_agent_api/src/: lib.rs  main.rs
mix_agent_common/: Cargo.toml
mix_agent_common/src/: lib.rs  mix_config.rs  mix_scheduler.rs
mix_agent_cpu/: Cargo.toml
mix_agent_cpu/src/: lib.rs  main.rs
mix_agent_directory/: Cargo.toml
mix_agent_directory/src/: lib.rs  main.rs
mix_agent_disk/: Cargo.toml
mix_agent_disk/src/: lib.rs  main.rs
mix_agent_keeper/: Cargo.toml
mix_agent_machine/: Cargo.toml  app_info.yml
mix_agent_machine/src/: lib.rs  main.rs
mix_agent_memory/: Cargo.toml
mix_agent_memory/src/: lib.rs  main.rs
mix_agent_network/: Cargo.toml
mix_agent_process/: Cargo.toml
mix_agent_process/src/: lib.rs  main.rs
mix_agent_service/: Cargo.toml
mix_agent_service/src/: lib.rs  main.rs
mix_agent_updater/: Cargo.toml
