[package]
name = "mix_agent_api"
version = "0.1.12"
authors = ["余亮华 <ylh@strongsoft.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mix_agent_common = { path = "../mix_agent_common" }
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
serde_yaml = "0.8.21"
serde_json = "1.0.67"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
access-json = "0.1.0"
evalexpr = "6.5.0"

