[package]
name = "mix_agent_common"
version = "0.1.0"
authors = ["余亮华 <ylh@strongsoft.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
config = "0.11.0"
log4rs = { version = "1.0.0", features = ["background_rotation","gzip"] }
log = "0.4.14"
cron= "0.9.0"
local_ipaddress = "0.1.3"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
