[package]
name = "mix_agent_cpu"
version = "0.1.0"
authors = ["余亮华 <ylh@strongsoft.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mix_agent_common = { path = "../mix_agent_common" }
sysinfo = "0.20.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
hotwatch = "0.4.6"